<resources>
    <string name="app_name">BmiApp</string>
    <string name="mass_empty">Mass is empty!</string>
    <string name="height_empty">Height is empty!</string>
    <string name="mass_val_err">Enter correct mass value! (20 – 1000)</string>
    <string name="height_val_err">Enter correct height value! (20 – 1000)</string>


    <string name="mass_kg">Mass (kg/lb)</string>
    <string name="height_cm">Height (cm/in)</string>
    <string name="count_bmi">Count BMI</string>
    <string name="empty_value">BMI</string>

    <string name="history">History of measurements</string>
    <string name="units">Set units</string>
    <string name="metric_units">Metric</string>
    <string name="imperial_units">Imperial</string>

    <string name="proper_bmi_val">Proper value of BMI: 18.5–24.99</string>
    <string name="high_bmi_val">Too high value of BMI is more than 25</string>
    <string name="low_bmi_val">Too low value of BMI is less than 18.5</string>
    <string name="bmiNum">25</string>
    <string name="BMIresult">Result</string>
    <string name="kg_label">kg</string>
    <string name="height_label">190</string>
    <string name="cm_label">cm</string>
    <string name="height_word">Height</string>
    <string name="mass_label">100</string>
    <string name="date_word">Date</string>
    <string name="date_label">dd-mm-rrrr</string>
    <string name="mass_word">Mass</string>
    <string name="bmi_label">BMI</string>
    <string name="background_popup">background</string>
    <string name="background_img_app">background main</string>

</resources>