<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">


        <TextView
            android:id="@+id/mass_units_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/massTV"
            android:layout_marginStart="1dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/mass_label"
            android:text="@string/kg_label"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/height_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/heightTV"
            android:layout_marginStart="240dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/bmi"
            android:text="@string/height_label"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/height_units_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/heightTV"
            android:layout_marginStart="0dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/height_label"
            android:text="@string/cm_label"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/heightTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="238dp"
            android:layout_toEndOf="@+id/bmi"
            android:text="@string/height_word"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mass_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/massTV"
            android:layout_marginStart="146dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/bmi"
            android:text="@string/mass_label"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/dateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_toEndOf="@+id/bmi"
            android:text="@string/date_word"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dateTV"
            android:layout_marginStart="23dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/bmi"
            android:text="@string/date_label" />

        <TextView
            android:id="@+id/massTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="146dp"
            android:layout_toEndOf="@+id/bmi"
            android:text="@string/mass_word"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bmi"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:text="@string/bmi_label"
            android:textSize="30sp" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>